# ftdi_eeprom

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.cmake  config.h.in  configure  configure.in  configure.in.in  ftdi_eeprom.kdevelop  ftdi_eeprom.kdevprj  ftdi_eeprom.spec  ftdi_eeprom.spec.in  subdirs
ftdi_eeprom/: Makefile.am  Makefile.in  main.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  main.c
templates/: cpp
