####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = ftdi_eeprom

## INCLUDES were found outside kdevelop specific part

ftdi_eeprom_SOURCES = main.c 
ftdi_eeprom_LDADD   = 


EXTRA_DIST = main.c example.conf

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ftdi_eeprom_LDFLAGS = $(all_libraries) 
                                                                                
